--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,14 +12,14 @@
             "program": "${file}",
             "args": 
             [
-                "--bin","/home/maziar/WA/Git/coco_preprocess_eval/images_eval_bin"
-                "--data-path", "/home/maziar/WA/eval_res/distiller/data",
-                //"--data-path","/home/maziar/WA/OI/convert_openIm_coco" 
+                "--bin","/home/maziar/WA/Git/coco_preprocess_eval/images_eval_bin",
+                //"--data-path", "/home/maziar/WA/eval_res/distiller/data",
+                "--data-path","/home/maziar/WA/OI/convert_openIm_coco" ,
                 "-j", "0",
                 "--pretrained",
                 "--model", "fasterrcnn_resnet50_fpn",
                 
-                "--bin-evaluate"
+                "--evaluate"
             ],
             "console": "integratedTerminal"
         }
