--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ yolo_weights/*
 yolo_data/*
 !yolo_data/*.sh
 eval_results/*
+
+jdict_not_resized.json
+jdict_not_resized_highTHR.json
+HW_Results/*.json
