--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,22 +9,24 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/evaluate.py",
+            // "program": "${workspaceFolder}/evaluate_tempo.py",
             "args": 
             [
-                "--data-path", "/media/mehrdad/3dd9d6bb-3b3b-426f-b47f-a87ad0ad8559/ml-data/COCO/2017", 
+                // "--data-path", "/media/mehrdad/3dd9d6bb-3b3b-426f-b47f-a87ad0ad8559/ml-data/COCO/2017", 
+                "--data-path", "/media/mehrdad/3dd9d6bb-3b3b-426f-b47f-a87ad0ad8559/ml-data/VOCtrainval_11-May-2012/VOCdevkit/VOC2012",
                 "-j", "0",
-                "-b", "1",
+                "-b", "2",
                 "--pretrained",
                 // "--model", "fasterrcnn_resnet50_fpn",
-                "--model", "yolo",
+                "--model", "mobilenetv1_ssd",
                 "--dataset", "coco2014",
                 // "--rect",
                 "--weights", "yolo_weights/yolov3.weights",
                 "--cfg", "yolo_cfg/yolov3.cfg",
-                "--bin-evaluate",
-                "--bin-folder", "coco2014_eval_bin",
-                "--hw-evaluate",
-                "--json-result", "Yolov3_d_q_thr001_fixed.json"
+                // "--bin-evaluate",
+                // "--bin-folder", "coco2014_eval_bin",
+                // "--hw-evaluate",
+                // "--json-result", "Yolov3_d_q_thr001_fixed.json"
             ],
             "console": "integratedTerminal",
             // "justMyCode": false
